--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,13 @@ os: linux
 files:
   - source: /
     destination: /var/www/html/
+permissions:
+  - object: /var/www/html/
+    owner: ec2-user
+    group: ec2-user
+    mode: 744
+    type:
+      - file
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies
